manifest/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: colorfruit-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colorfruit
spec:
  hosts:
  - "*"
  gateways:
  - colorfruit-gateway
  http:
  - match:
    - uri:
        exact: /get
    - uri:
        exact: /forward
    - uri:
        exact: /multihost
    route:
    - destination:
        host: front.appmeshload.svc.cluster.local
        port:
          number: 8090
