manifest/istio/virtual_service_50_v2.yaml
# https://cloud.tencent.com/document/product/1261/62954
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
  namespace: appmeshload
spec: # 缺省 gateway 参数，表示该路由配置应用于 mesh 内部 sidecar 的流量
  hosts:
  - front # 匹配访问该 host 的流量
  http:
  - route:
    - destination: # 配置目的端及权重
        host: front.appmeshload.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color
  namespace: appmeshload
spec:
  hosts:
  - color
  http:
  - route:
    - destination:
        host: color
        subset: v1
      weight: 50
    - destination:
        host: color
        subset: v3
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruit
  namespace: appmeshload
spec:
  hosts:
  - fruit
  http:
  - route:
    - destination:
        host: fruit.appmeshload.svc.cluster.local
        subset: v1
        port:
          number: 8090
