manifest/istio/virtual_service_all_v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
  - front.appmeshload.svc.cluster.local
  http:
  - route:
    - destination:
        host: front.appmeshload.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color
spec:
  hosts:
  - color
  http:
  - route:
    - destination:
        host: color.appmeshload.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruit
spec:
  hosts:
  - fruit
  http:
  - route:
    - destination:
        host: fruit.appmeshload.svc.cluster.local
        subset: v1
